Fix button order and adjust height of messagesWrap

--- a/src/styles/book.module.scss
+++ b/src/styles/book.module.scss
@@ -62,7 +62,8 @@
 
   .messagesWrap {
     width: 100%;
-    height: auto;
+    height: 37rem;
+    overflow-y: scroll;
     margin: 0 auto;
     padding: 0 0.4rem;
 
