--- a/src/styles/calendar.module.scss
+++ b/src/styles/calendar.module.scss
@@ -17,6 +17,8 @@
     bottom: 0;
     left: 0;
     margin: 0 auto;
+    max-height: 90vh;
+    overflow-y: scroll;
     background: var(--border-bg);
     box-shadow: var(--border-shadow);
     border-top: var(--border-stroke);
